assets/css/main.css
@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow-x: hidden;
    background-color: black;
}

body {
    font-family: 'Roboto Mono', monospace;
    margin: 0;
}

/*----------Navigation bar--------*/

.navbar {
    height: 7.5vh;
    background-color: black;
}

@media (max-width: 767px) {
    .navbar {
        display: none!important;
    }
}

canvas {
    z-index: 0;
    width: 100% !important;
    height: 100% !important;
}

/*----------Wrappers--------*/

main {
    height: 100%;
    width: 100%;
    background-color: black;
}

#wrapper {
    /*https://css-tricks.com/the-trick-to-viewport-units-on-mobile/*/
    /*  height: calc(var(--vh, 1vh) * 100);*/
    height: 100%;
    width: 100%;
    /*  padding-top:2.5%;
    padding-bottom:2.5%;*/
}

#container {
    /*w and h fixed ipad bug*/
    position: relative;
    display: block;
    height: 100%;
    width: 100%;
    margin-top: 0px;
    padding: 0;
    margin: 0;
    z-index: 0;
}

@media (min-width: 768px) {
    #wrapper {
        height: 100vh;
        padding: 20px;
        background-color: rgb(30, 30, 30);
    }
}

/*----------Toolbar--------*/

.ui-container {
    /*height: 15vh;*/
    background-color: rgba(20, 20, 20, 0.5);
    position: absolute;
    width: 100%;
    bottom: 0;
    left: 50%;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
    z-index: 1;
    /*so that it appears on top of sketch when not in fullscreen*/
}

.ui-container .row {
    padding: 5px;
}

.uiButton {
    border: none;
    background: none;
    width: auto;
}

.uiButton img {
    max-width: 60px;
    max-height: 60px;
}

.controlsImg {
    height: 50px;
    width: 50px;
}

@media (min-width: 768px) {
    .ui-container {
        bottom: 5vh;
        width: auto;
    }
}

/*----------Settings Menu--------*/

#close-settings {
    color: white;
    padding: 5px;
    float: right;
    border: none;
    background-color: transparent;
    outline: none;
}

.close {
    width: 100%;
}

.icon {
    max-height: 20px;
    max-width: 20px;
}

#gui {
    position: absolute;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    top: 0.25rem;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    max-height: 85vh;
    border: 0.25rem solid white;
    border-radius: 0;
    /* border: 0.5px solid grey;*/
    text-align: center;
    width: 100%;
}

input[type=range] {
    -webkit-appearance: none;
    background: transparent;
}

input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    height: 10px;
    width: 15px;
    border-radius: 99px;
    background: #fff;
    margin-top: -4px;
}

input[type=range]::-webkit-slider-runnable-track {
    width: 300px;
    height: 4px;
    background: #ddd;
}

#gui2 {
    width: 75%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 25px;
}

#toggler {
    position: absolute;
    /* right: 0;*/
    width: 100%;
    max-height: 85vh;
}

@media (min-width: 576px) {}

@media (min-width: 768px) {
    #gui {
        position: absolute;
        color: white;
        background-color: rgba(0, 0, 0, 0.5);
        /* background-color: rgba(40,40,40, 0.5);*/
        margin: 2.5% 2.5% 0 2.5%;
        padding: 2.5%;
        width: 90%;
        border: 1px solid white;
        /* border: 0.5px solid grey;*/
        text-align: center;
        height: auto;
    }
}

@media (min-width: 992px) {
    #gui {
        position: absolute;
        color: white;
        background-color: rgba(0, 0, 0, 0.5);
        /* background-color: rgba(40,40,40, 0.5);*/
        padding: 10px;
        top: 0;
        right: 0;
        border: 1px solid white;
        /* border: 0.5px solid grey;*/
        text-align: center;
        height: auto;
    }
    /*get rid*/
    #toggler {
        position: absolute;
        right: 0;
        width: 30vw;
        margin-top: 5px;
        margin-right: 10px;
    }
}

